Adding Behat tests to teameval

--- a/local/teameval/templates/block.mustache
+++ b/local/teameval/templates/block.mustache
@@ -1,4 +1,4 @@
-<h2 class="local-teameval-container-heading" name="team_evaluation">Team Evaluation</h2>
+<h2 class="local-teameval-container-heading" name="team_evaluation">{{#str}} pluginname, local_teameval {{/str}}</h2>
 <div class="local-teameval-containerbox">
 {{{settings}}}
 <nav class="tabs">
