Fix bug where Split100 interpreted 0 as NULL
Yeah, that's actually a huge problem. Shite.

--- a/local/teameval/question/split100/templates/opinion.mustache
+++ b/local/teameval/question/split100/templates/opinion.mustache
@@ -1,1 +1,1 @@
-{{#mark}}{{mark}}%{{/mark}}{{^mark}}{{#str}} nomark, teamevalquestion_split100 {{/str}}{{/mark}}
+{{^empty}}{{mark}}%{{/empty}}{{#empty}}{{#str}} nomark, teamevalquestion_split100 {{/str}}{{/empty}}
